# GOSIM-agent

./: .env.sample  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
assets/: langgraph_core_pipeline.mmd
docs/: PR.md
src/: config.py  streamlit_app.py
src/palyground/: example_llm_query_topic_model.py
src/utils/: llm.py  open_alex.py  research_agent.py  topic_model_llm.py
